[package]
name = "chiphuit"
version = "0.1.0"
authors = ["bernstein <bernsteining@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.58"
rand =  "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.58"
features = [
  'Document',
  'HtmlElement',
  'Node',
  'HtmlCanvasElement',
  'Window',
  'CanvasRenderingContext2d',
  'ImageData',
  'console',
  'Event',
  'MouseEvent',
  'Node',
  'FileReader',
  'File',
  'FileList',
  'HtmlInputElement',
  'HtmlLabelElement',
  'KeyboardEvent',
  'TouchEvent',
  'HtmlTableElement',
  'HtmlCollection',
  'HtmlTableRowElement',
  'HtmlTableCellElement',
  'HtmlCollection',
  'HtmlTableCellElement',
  'HtmlHeadElement',
  'CssStyleDeclaration',
  'Clipboard',
  'Navigator',
  'AudioContext',
  'OscillatorType',
  'OscillatorNode',
  'GainNode',
  'AudioParam',
  'AudioNode',
  'AudioDestinationNode']

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.wasm-bindgen]
version = "0.2.81"
